syntax = "proto3";

package proto;      // 包名
option go_package = '/server';    // 指定生成的go代码所存放的路径，不用提前创建

service DagPool {
  rpc Add (AddReq) returns (AddReply) {}
  rpc Get (GetReq) returns (GetReply) {}
  rpc Remove (RemoveReq) returns (RemoveReply) {}
}
message PoolUser {
  string username = 1;
  string pass = 2;
}
message AddReq {
  bytes block = 1;
  PoolUser user =2;
}

message AddReply {
  string cid = 1;
}
message GetReq {
  string cid = 1;
  PoolUser user =2;
}

message GetReply {
  bytes block = 1;
}
message RemoveReq {
  string cid = 1;
  PoolUser user =2;
}

message RemoveReply {
  string message = 1;
}